--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  background-color: light-blue;
+  background-color: blue;
 }
 
 body {
@@ -8,11 +8,23 @@ body {
 
 h1 {
   color: dark-grey;
+  font-size: 40px;
 }
+
+h3 {
+  color: dark-grey;
+  font-size: 24px;
+}
+
+p {
+  font-size: 16px;
+}
+
+
 section {
   margin: 3em;
 }
 
 .sub-section {
-  background-color: light-grey;
+   background-color: grey;
 }
