--- a/style.css
+++ b/style.css
@@ -32,3 +32,33 @@ section {
 a {
   border: 2px solid black;
 }
+
+.banner {
+        width: 100%;
+        height: 100vh;
+        background-image: url('banner.jpg');
+        background-size: cover;
+        background-position: center;
+      }
+      .button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .button a {
+        display: block;
+        width: 200px;
+        height: 50px;
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        line-height: 50px;
+        text-decoration: none;
+        border-radius: 25px;
+        font-size: 18px;
+      }
+      .button a:hover {
+        background-color: #555;
+      }
+
