--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,24 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #D0CFCF;
+    background-color: #110901;
+    background-image: url(../images/TanFiber.jpg);
     text-align: left;
 }
 
 h1 {
-    color: dark-grey;
+    color: #110901;
     font-size: 40px;
 }
 
 h3 {
-    color: dark-grey;
+    color: #110901;
     font-size: 24px;
 }
 
 p {
     font-size: 16px;
+    color: #110901;
 }
 
 
@@ -33,8 +35,8 @@ p {
     display: block;
     width: 200px;
     height: 50px;
-    background-color: #333;
-    color: #fff;
+    background-color: #110901;
+    color: #CABDA5;
     text-align: center;
     line-height: 50px;
     text-decoration: none;
@@ -42,6 +44,12 @@ p {
     font-size: 18px;
 }
 
+
+.page-container {
+    background-color: #F8F8EE;
+    margin: 70px;
+    border-radius: 8px;
+}
 
   /* INDEX PAGE */
 
@@ -53,6 +61,7 @@ p {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
 }
 
 
@@ -67,26 +76,28 @@ p {
 .title {
     font-size: 3rem;
     text-align: center;
-    color: #fff;
+    color: #CABDA5;
     margin-bottom: 1rem;
 }
 
 button {
-    background-color: #333;
-    color: #fff;
+    background-color: #110901;
+    color: #CABDA5;
     font-size: 1.4em;
     padding: 1rem 2rem;
     border: none;
     border-radius: 0.5rem;
     cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 a button:hover {
     background-color: #555;
+    cursor: pointer;
 }
 
 h1.heading {
-    color: white;
+    color: #ECE3D3;
     font-size: 4em;
 }
 
@@ -99,20 +110,26 @@ h1.heading {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 95vh;
+    height: 100vh;
+    position: relative;
+    opacity: 40%;
+    
 }
 
 .header {
     display: flex;
     align-items: center;
-    
-    color: #fff;
+    margin-top: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #F8F8EE;
     padding: 1rem;
 }
 
 .header a {
     text-decoration: none;
-    color: #fff;
+    color: #F8F8EE;
 }
 .header a:hover {
 
@@ -122,7 +139,8 @@ h1.heading {
 .title {
     font-size: 2rem;
     margin: 0;
-    margin-right: auto;
+    margin-right: 400px;
+    margin-left: 40px;
     padding: 0;
 }
 
@@ -162,6 +180,43 @@ h1.heading {
 }
 
 
+
+.line-1{
+    position: absolute;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    top: 50%;  
+    width: 24em;
+    margin-left: 280px;
+    border-right: 2px solid rgba(255,255,255,.75);
+    font-size: 350%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    transform: translateY(-50%);  
+    height: 50px;  
+    padding: 20px;
+    color: whitesmoke;
+}
+
+/* Animation */
+.anim-typewriter{
+    animation: typewriter 4s steps(44) 1s 1 normal both,
+                blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+    from{width: 0;}
+    to{width: 20em;}
+}
+@keyframes blinkTextCursor{
+    from{border-right-color: rgba(255,255,255,.75);}
+    to{border-right-color: transparent;}
+}
+
+
+
+
+
   /* sections */
 
 
@@ -172,7 +227,7 @@ section {
     padding-top: 60px;
 }
 .sub-section {
-    background-color: rgb(184, 184, 184);
+    background-color: #F8F8EE;
     padding: 20px 140px;
 
 }
@@ -181,7 +236,7 @@ section {
   /* Intro */
 
 #intro {
-    height: 150vh;
+    height: 170vh;
 
 }
 
@@ -194,13 +249,13 @@ section {
 
   /* During */
 #during {
-    height: 150vh;
+    height: 270vh;
 
 }
 
   /* After */
 #after {
-    height: 150vh;
+    height: 200vh;
 
 }
 
