--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ section {
 .section-heading {
     width: 500px;
     text-align: center;
-    margin-left: 450px;
+    margin-left: 30%;
     margin-top: 0;
 }
 .sub-section {
