--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ p {
     background-color: #F8F8EE;
     margin: 70px;
     border-radius: 8px;
+	display: block;
     
 }
 
@@ -267,6 +268,7 @@ h1.heading {
 
 section {
     margin: 3em;
+	
     
 
 }
@@ -295,32 +297,9 @@ section {
 
 
 
-  /* Intro */
-
-#intro {
-    height: 370vh;
-
+img {
+	max-width: 100%;
 }
-
-  /* Before */
-#before {
-    
-    height: 300vh;
-
-}
-
-  /* During */
-#during {
-    height: 400vh;
-
-}
-
-  /* After */
-#after {
-    height: 600vh;
-
-}
-
 
 
 
