--- a/css/style.css
+++ b/css/style.css
@@ -275,8 +275,7 @@ section {
 .section-heading {
     width: 500px;
     text-align: center;
-    margin-left: 30%;
-    margin-top: 0;
+    margin: 0 auto;
 }
 .sub-section {
     background-color: #F8F8EE;
