--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ section {
 .section-heading {
     width: 500px;
     text-align: center;
-    margin: 0 auto;
+    margin: auto auto;
 }
 .sub-section {
     background-color: #F8F8EE;
